dropped function argument from deploy lambda function step

--- a/.github/workflows/deploy-to-aws-lambda.yml
+++ b/.github/workflows/deploy-to-aws-lambda.yml
@@ -26,4 +26,4 @@ jobs:
         run: npm ci
      
       - name: Deploy lambda function
-        run: sls deploy --function dunnedev-website
+        run: sls deploy
