--- a/.github/workflows/deploy-to-aws-lambda.yml
+++ b/.github/workflows/deploy-to-aws-lambda.yml
@@ -28,4 +28,4 @@ jobs:
           aws-region: eu-west-1
 
       - name: Deploy to S3 bucket
-        run: aws s3 sync ./build/ s3://dunnedev-react-website --delete
+        run: aws s3 sync ./dist/ s3://dunnedev-react-website --delete
